--- a/en/catalog/index.html
+++ b/en/catalog/index.html
@@ -2,17 +2,107 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>Product Page</title>
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- Basic Meta Tags -->
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Catalog — Kirito Cloth | Replica Sneakers & Luxury Brand Clothing</title>
+  <meta name="description"
+    content="Browse all available models of Balenciaga, Rick Owens, Vetements and more. Wide selection of colors, sizes, and brands.">
+  <meta name="author" content="Kirito Cloth">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="en">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="uk_UA">
+  <meta property="og:locale:alternate" content="ru_RU">
+  <meta property="og:site_name" content="Kirito Cloth">
+  <link rel="alternate" hreflang="x-default" href="https://kirito-cloth.com/en/catalog/" />
+  <link rel="canonical" href="https://kirito-cloth.com/en/catalog/">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Catalog | Kirito Cloth — Replica Luxury Brands">
+  <meta property="og:description"
+    content="Explore our catalog of replica sneakers and clothing — Balenciaga, Rick Owens, Maison Margiela and more.">
+  <meta property="og:image" content="https://kirito-cloth.com/img/open-graph.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://kirito-cloth.com/en/catalog/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Catalog | Kirito Cloth — Replica Luxury Brands">
+  <meta name="twitter:description"
+    content="Explore our catalog of replica sneakers and clothing — Balenciaga, Rick Owens, Maison Margiela and more.">
+  <meta name="twitter:image" content="https://kirito-cloth.com/img/open-graph.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="Kirito Cloth">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Manifest for PWA -->
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Alternate Language Versions -->
+  <link rel="alternate" hreflang="uk" href="https://kirito-cloth.com/catalog/" />
+  <link rel="alternate" hreflang="ru" href="https://kirito-cloth.com/ru/catalog/" />
+  <link rel="alternate" hreflang="en" href="https://kirito-cloth.com/en/catalog/" />
+  <link rel="alternate" hreflang="x-default" href="https://kirito-cloth.com/en/catalog/" />
+
+  <!-- Fonts and Styles -->
+  <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
-    rel="stylesheet" />
-  <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
+  <!-- Structured Data JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Store",
+    "name": "Kirito Cloth",
+    "image": "https://kirito-cloth.com/img/web-app-manifest-512x512.png",
+    "url": "https://kirito-cloth.com",
+    "sameAs": [
+      "https://www.instagram.com/kirito_cloth/",
+      "https://t.me/kirito_cloth",
+      "https://www.tiktok.com/@kirito_sneakers"
+    ],
+    "description": "Buy stylish replicas of your favorite luxury brands. Balenciaga, Vetements, Rick Owens and more.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "UA"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://kirito-cloth.com/en/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Catalog",
+        "item": "https://kirito-cloth.com/en/catalog/"
+      }
+    ]
+  }
+  </script>
+
 </head>
+
 
 <body>
   <main>
