--- a/en/product/index.html
+++ b/en/product/index.html
@@ -2,18 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Product Page</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kirito Cloth - Replica Sneakers & Clothing</title>
+    <!-- Basic meta tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Kirito Cloth - the best replicas of luxury brands. Worldwide shipping. Support via Telegram and Instagram." />
+    <meta name="author" content="Kirito Cloth" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="uk_UA" />
+    <meta property="og:locale:alternate" content="ru_RU" />
+    <meta property="og:site_name" content="Kirito Cloth" />
+
+    <link rel="canonical" href="https://kirito-cloth.com/en/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Kirito Cloth - High Quality Luxury Brand Replicas" />
+    <meta property="og:description"
+        content="Shop stylish replicas of your favorite luxury brands. Balenciaga, Vetements, Rick Owens and more." />
+    <meta property="og:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://kirito-cloth.com/en/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kirito Cloth - High Quality Luxury Brand Replicas" />
+    <meta name="twitter:description"
+        content="Shop stylish replicas of your favorite luxury brands. Balenciaga, Vetements, Rick Owens and more." />
+    <meta name="twitter:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Kirito Cloth" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Manifest for PWA -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Alternate language versions -->
+    <link rel="alternate" href="https://kirito-cloth.com/" hreflang="uk" />
+    <link rel="alternate" href="https://kirito-cloth.com/ru/" hreflang="ru" />
+    <link rel="alternate" href="https://kirito-cloth.com/en/" hreflang="en" />
+
+    <!-- Fonts & Styles -->
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
         rel="stylesheet">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+    <!-- JSON-LD and other dynamic meta tags will be added via JS -->
 </head>
+
 
 <body>
     <main>
