--- a/en/us.html
+++ b/en/us.html
@@ -2,21 +2,103 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>About Us</title>
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
-    rel="stylesheet" />
-  <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet" />
-  <style>
-    body, html {
-        scroll-behavior: smooth;
+    <title>About Us — Kirito Cloth | Replica Sneakers & Apparel</title>
+    <!-- Core meta tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Learn more about Kirito Cloth — our values, replica quality, and service. Support via Telegram and Instagram. Worldwide shipping." />
+    <meta name="author" content="Kirito Cloth" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="uk_UA" />
+    <meta property="og:locale:alternate" content="ru_RU" />
+    <meta property="og:site_name" content="Kirito Cloth" />
+
+    <link rel="canonical" href="https://kirito-cloth.com/en/about/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="About Us — Kirito Cloth | Luxury Brand Replicas" />
+    <meta property="og:description"
+        content="Learn more about Kirito Cloth — our values, replica quality, and service. Support via Telegram and Instagram. Worldwide shipping." />
+    <meta property="og:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://kirito-cloth.com/en/about/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="About Us — Kirito Cloth | Luxury Brand Replicas" />
+    <meta name="twitter:description"
+        content="Learn more about Kirito Cloth — our values, replica quality, and service. Support via Telegram and Instagram. Worldwide shipping." />
+    <meta name="twitter:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+    <meta name="twitter:image:alt" content="Kirito Cloth - About Us" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Kirito Cloth" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- PWA manifest -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Alternate language versions -->
+    <link rel="alternate" href="https://kirito-cloth.com/about/" hreflang="uk" />
+    <link rel="alternate" href="https://kirito-cloth.com/ru/about/" hreflang="ru" />
+    <link rel="alternate" href="https://kirito-cloth.com/en/about/" hreflang="en" />
+
+    <!-- Fonts and styles -->
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <!-- JSON-LD structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Store",
+      "name": "Kirito Cloth",
+      "image": "https://kirito-cloth.com/img/web-app-manifest-512x512.png",
+      "url": "https://kirito-cloth.com",
+      "sameAs": [
+        "https://www.instagram.com/kirito_cloth/",
+        "https://t.me/kirito_cloth",
+        "https://www.tiktok.com/@kirito_sneakers"
+      ],
+      "description": "Shop stylish replicas of your favorite luxury brands. Balenciaga, Vetements, Rick Owens, and more.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "UA"
+      }
     }
-  </style>
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://kirito-cloth.com/en/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "About Us",
+          "item": "https://kirito-cloth.com/en/about/"
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
