--- a/catalog/index.html
+++ b/catalog/index.html
@@ -2,16 +2,106 @@
 <html lang="uk">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>Product Page</title>
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- Основні мета-теги -->
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Каталог — Kirito Cloth | Репліки кросівок та одягу люкс-брендів</title>
+  <meta name="description"
+    content="Переглянь усі доступні моделі реплік Balenciaga, Rick Owens, Vetements та інших. Великий вибір кольорів, розмірів і брендів.">
+  <meta name="author" content="Kirito Cloth">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="uk">
+  <meta property="og:locale" content="uk_UA">
+  <meta property="og:locale:alternate" content="ru_RU">
+  <meta property="og:locale:alternate" content="en_US">
+  <meta property="og:site_name" content="Kirito Cloth">
+  <link rel="alternate" hreflang="x-default" href="https://kirito-cloth.com/" />
+  <link rel="canonical" href="https://kirito-cloth.com/catalog/">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Каталог | Kirito Cloth — Репліки люкс-брендів">
+  <meta property="og:description"
+    content="Ознайомся з нашим каталогом реплік кросівок і одягу — Balenciaga, Rick Owens, Maison Margiela та інші.">
+  <meta property="og:image" content="https://kirito-cloth.com/img/open-graph.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://kirito-cloth.com/catalog/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Каталог | Kirito Cloth — Репліки люкс-брендів">
+  <meta name="twitter:description"
+    content="Ознайомся з нашим каталогом реплік кросівок і одягу — Balenciaga, Rick Owens, Maison Margiela та інші.">
+  <meta name="twitter:image" content="https://kirito-cloth.com/img/open-graph.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="Kirito Cloth">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Манифест для PWA -->
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Альтернативні мовні версії -->
+  <link rel="alternate" hreflang="uk" href="https://kirito-cloth.com/catalog/" />
+  <link rel="alternate" hreflang="ru" href="https://kirito-cloth.com/ru/catalog/" />
+  <link rel="alternate" hreflang="en" href="https://kirito-cloth.com/en/catalog/" />
+  <link rel="alternate" hreflang="x-default" href="https://kirito-cloth.com/catalog/" />
+
+
+  <!-- Шрифти та стилі -->
+  <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
-    rel="stylesheet" />
-  <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
+  <!-- Структуровані дані JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Store",
+    "name": "Kirito Cloth",
+    "image": "https://kirito-cloth.com/img/web-app-manifest-512x512.png",
+    "url": "https://kirito-cloth.com",
+    "sameAs": [
+      "https://www.instagram.com/kirito_cloth/",
+      "https://t.me/kirito_cloth",
+      "https://www.tiktok.com/@kirito_sneakers"
+    ],
+    "description": "Купуй стильні репліки улюблених люкс-брендів. Balenciaga, Vetements, Rick Owens та інші.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "UA"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Головна",
+      "item": "https://kirito-cloth.com/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Каталог",
+      "item": "https://kirito-cloth.com/catalog/"
+    }
+  ]
+}
+</script>
+
 </head>
 
 <body>
