--- a/ru/product/index.html
+++ b/ru/product/index.html
@@ -2,18 +2,66 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Страница товара</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kirito Cloth - Реплики кроссовок и одежды</title>
+    <!-- Основные мета-теги -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Kirito Cloth - магазин лучших реплик люкс-брендов. Доставка по всему миру. Поддержка в Telegram и Instagram." />
+    <meta name="author" content="Kirito Cloth" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:locale:alternate" content="uk_UA" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:site_name" content="Kirito Cloth" />
+
+    <link rel="canonical" href="https://kirito-cloth.com/ru/" />
+
+    <!-- Open Graph (пустые или базовые, будут обновлены скриптом) -->
+    <meta property="og:title" content="Kirito Cloth - Реплики люкс-брендов лучшего качества" />
+    <meta property="og:description"
+        content="Покупай стильные реплики любимых люкс-брендов. Balenciaga, Vetements, Rick Owens и другие." />
+    <meta property="og:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://kirito-cloth.com/ru/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kirito Cloth - Реплики люкс-брендов лучшего качества" />
+    <meta name="twitter:description"
+        content="Покупай стильные реплики любимых люкс-брендов. Balenciaga, Vetements, Rick Owens и другие." />
+    <meta name="twitter:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Kirito Cloth" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Манифест для PWA -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Альтернативные языковые версии -->
+    <link rel="alternate" href="https://kirito-cloth.com/" hreflang="uk" />
+    <link rel="alternate" href="https://kirito-cloth.com/ru/" hreflang="ru" />
+    <link rel="alternate" href="https://kirito-cloth.com/en/" hreflang="en" />
+
+    <!-- Шрифты и стили -->
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
         rel="stylesheet">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+    <!-- Здесь в JS добавятся JSON-LD и другие динамические метатеги -->
 </head>
+
 
 <body>
     <main>
