--- a/ru/us.html
+++ b/ru/us.html
@@ -2,22 +2,105 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>О нас</title>
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
-    rel="stylesheet" />
-  <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet" />
-  <style>
-    body, html {
-        scroll-behavior: smooth;
+    <title>О нас — Kirito Cloth | Реплики кроссовок и одежды</title>
+    <!-- Основные мета-теги -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Узнайте больше о Kirito Cloth — наши ценности, качество реплик и сервис. Поддержка в Telegram и Instagram. Доставка по всему миру." />
+    <meta name="author" content="Kirito Cloth" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:locale:alternate" content="uk_UA" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:site_name" content="Kirito Cloth" />
+
+    <link rel="canonical" href="https://kirito-cloth.com/ru/about/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="О нас — Kirito Cloth | Реплики люкс-брендов" />
+    <meta property="og:description"
+        content="Узнайте больше о Kirito Cloth — наши ценности, качество реплик и сервис. Поддержка в Telegram и Instagram. Доставка по всему миру." />
+    <meta property="og:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://kirito-cloth.com/ru/about/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="О нас — Kirito Cloth | Реплики люкс-брендов" />
+    <meta name="twitter:description"
+        content="Узнайте больше о Kirito Cloth — наши ценности, качество реплик и сервис. Поддержка в Telegram и Instagram. Доставка по всему миру." />
+    <meta name="twitter:image" content="https://kirito-cloth.com/img/open-graph.jpg" />
+    <meta name="twitter:image:alt" content="Kirito Cloth - О нас" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Kirito Cloth" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Манифест для PWA -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Альтернативные языковые версии -->
+    <link rel="alternate" href="https://kirito-cloth.com/about/" hreflang="uk" />
+    <link rel="alternate" href="https://kirito-cloth.com/ru/about/" hreflang="ru" />
+    <link rel="alternate" href="https://kirito-cloth.com/en/about/" hreflang="en" />
+
+    <!-- Шрифты и стили -->
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <!-- Структурированные данные JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Store",
+      "name": "Kirito Cloth",
+      "image": "https://kirito-cloth.com/img/web-app-manifest-512x512.png",
+      "url": "https://kirito-cloth.com/ru",
+      "sameAs": [
+        "https://www.instagram.com/kirito_cloth/",
+        "https://t.me/kirito_cloth",
+        "https://www.tiktok.com/@kirito_sneakers"
+      ],
+      "description": "Покупай стильные реплики любимых люкс-брендов. Balenciaga, Vetements, Rick Owens и другие.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "UA"
+      }
     }
-  </style>
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Главная",
+          "item": "https://kirito-cloth.com/ru/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "О нас",
+          "item": "https://kirito-cloth.com/ru/about/"
+        }
+      ]
+    }
+    </script>
 </head>
+
 
 <body>
   <main>
