--- a/ru/product/index.html
+++ b/ru/product/index.html
@@ -116,7 +116,7 @@
                         <div class="item-details-content noto-sans-item-details-content">
                             <p>На данный момент все заказы принимаются исключительно через <a
                                     href="https://t.me/kirito_ls" target="_blank">Telegram</a> или в <a
-                                    href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr"
+                                    href="https://www.instagram.com/kirito_cloth/"
                                     target="_blank">директ Instagram</a>.</p>
                         </div>
                     </div>
