--- a/en/product/index.html
+++ b/en/product/index.html
@@ -116,7 +116,7 @@
                         <div class="item-details-content noto-sans-item-details-content">
                             <p>At the moment, all orders are accepted exclusively via <a
                                     href="https://t.me/kirito_ls" target="_blank">Telegram</a> or in <a
-                                    href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr"
+                                    href="https://www.instagram.com/kirito_cloth/"
                                     target="_blank">Instagram Direct</a>.</p>
                         </div>
                     </div>
