--- a/en/us.html
+++ b/en/us.html
@@ -114,7 +114,7 @@
           <h2 class="noto-sans-dd-title">Payment</h2> 
           <p>We work on a full prepayment basis, but partial payment is also possible — please check the conditions with our <a target="_blank" href="https://t.me/kirito_ls" target="_blank">manager</a>. This is because our assortment includes a wide variety of models, colors, and sizes, and our financial capacity for stocking large volumes is limited.</p>
           <p>In some cases, specific items may be available with cash on delivery — such products are posted separately in our <a target="_blank" href="https://t.me/kirito_sneakers" target="_blank">Telegram channel</a>.</p>
-          <p>At the moment, all orders are accepted exclusively via <a target="_blank" href="https://t.me/kirito_ls" target="_blank">Telegram</a> or in <a target="_blank" href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr" target="_blank">Instagram Direct</a>.</p>
+          <p>At the moment, all orders are accepted exclusively via <a target="_blank" href="https://t.me/kirito_ls" target="_blank">Telegram</a> or in <a target="_blank" href="https://www.instagram.com/kirito_cloth/" target="_blank">Instagram Direct</a>.</p>
         </li>
         <li id="us-order">
           <h2 class="noto-sans-dd-title">Delivery</h2>
