--- a/product/index.html
+++ b/product/index.html
@@ -118,7 +118,7 @@
                         <div class="item-details-content noto-sans-item-details-content">
                             <p>На даний момент усі замовлення приймаються виключно через <a
                                     href="https://t.me/kirito_ls" target="_blank">Telegram</a> або в <a
-                                    href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr"
+                                    href="https://www.instagram.com/kirito_cloth/"
                                     target="_blank">директ Instagram</a>.</p>
                         </div>
                     </div>
