--- a/ru/us.html
+++ b/ru/us.html
@@ -115,7 +115,7 @@
           <h2 class="noto-sans-dd-title">Оплата</h2> 
           <p>Мы работаем по полной предоплате, однако возможна также оплата частями — уточняйте условия у <a target="_blank" href="https://t.me/kirito_ls" target="_blank">менеджера</a>. Это связано с тем, что наш ассортимент включает большое количество моделей, цветов и размеров, а также с ограниченными финансовыми возможностями для закупки крупных партий товара.</p>
           <p>В некоторых случаях определённые позиции могут быть доступны с оплатой при получении — такие товары мы публикуем отдельно в <a target="_blank" href="https://t.me/kirito_sneakers" target="_blank">Telegram-канале</a>.</p>
-          <p>На данный момент все заказы принимаются исключительно через <a target="_blank" href="https://t.me/kirito_ls" target="_blank">Telegram</a> или в <a target="_blank" href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr" target="_blank">Instagram Direct</a>.</p>
+          <p>На данный момент все заказы принимаются исключительно через <a target="_blank" href="https://t.me/kirito_ls" target="_blank">Telegram</a> или в <a target="_blank" href="https://www.instagram.com/kirito_cloth/" target="_blank">Instagram Direct</a>.</p>
         </li>
         <li id="us-order">
           <h2 class="noto-sans-dd-title">Доставка</h2>
