--- a/en/us.html
+++ b/en/us.html
@@ -100,6 +100,15 @@
     }
     </script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V4FD5FC3L9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V4FD5FC3L9');
+</script>
 
 <body>
   <main>
