--- a/product/index.html
+++ b/product/index.html
@@ -61,6 +61,15 @@
 
     <!-- Здесь в JS добавятся JSON-LD и другие динамические метатеги -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V4FD5FC3L9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V4FD5FC3L9');
+</script>
 
 
 <body>
